--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -9,5 +9,66 @@
     "banner-title": "Custom Projects",
     "banner-text": "Crafted for life. Our custom wooden facade houses offer modern design, unparalleled energy efficiency, and lasting durability.",
     
-    "":""
+    "featured-title": "Vast variaety of designs.",
+    "featured-name-1" : "Open Plan & Low Profile",
+    "featured-name-2" : "Open Terrace & Wide window",
+    "featured-name-3" : "Modern twin houses",
+    "featured-price" : "Starting price",
+    "featured-button" : "Make an offer",
+
+    "decore-text" : "“We specialize in crafting unique custom houses tailored to your needs. Our team of skilled professionals take pride in producing high-quality work that is unmatched in the industry!,,",
+    "decore-button" : "Learn More",
+
+    "join-text" : "Join our Clients’ zone and upload your custom project with description, and our team will contact you as soon as possible.",
+    "join-button" : "Join Now",
+    
+    "icons-name-1" : "Energy Efficient",
+    "icons-name-2" : "Sustainability",
+    "icons-name-3" : "Aesthetics",
+    "icons-name-4" : "Functionality",
+    "icons-text-1" : "From insulation to materials, we prioritize energy efficiency to help you save on your utility bills.",
+    "icons-text-2" : "Our custom wooden facade houses are constructed with responsibly-sourced materials and incorporate eco-friendly practices throughout the building process.",
+    "icons-text-3" : "With a focus on quality craftsmanship and attention to detail, we create homes that are as beautiful as they are functional.",
+    "icons-text-4" : "Both energy-efficient appliances and smart home technology, we incorporate features that make everyday life easier and more comfortable.",
+    
+    "footer-name-1" : "Contacts",
+    "footer-name-2" : "Menu",
+    "footer-name-3" : "Follow Us",
+    "footer-link-1" : "Home",
+    "footer-link-2" : "Projects",
+    "footer-link-3" : "Partners",
+    "footer-link-4" : "Exports",
+    "footer-link-5" : "About Us",
+    "mini-footer-text" : "All rights reserved",
+
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : "",
+    "" : ""
 }
