--- a/public/locales/lv/common.json
+++ b/public/locales/lv/common.json
@@ -9,5 +9,38 @@
     "banner-title": "Pielāgoti projekti",
     "banner-text": "Izstrādāts uz mūžu. Mūsu pielāgotās koka fasādes mājas piedāvā modernu dizainu, nepārspējamu energoefektivitāti un ilgstošu izturību.",
     
-    "":""
+    "featured-title": "Plaša dizanu izvēle.",
+    "featured-name-1" : "Atvērts plāns un zems profils",
+    "featured-name-2" : "Liela terase & Plaši logi",
+    "featured-name-3" : "Mūsdienīgas dvīņu mājas",
+    "featured-price" : "Sākuma cena",
+    "featured-button" : "Uztaisīt piedāvājumu",
+
+    "decore-text" : "“Mēs specializējamies unikālu māju izstrādē, kas pielāgotas jūsu vajadzībām. Mūsu prasmīgo profesionāļu komanda lepojas ar kvalitatīvu darbu, kas ir nepārspējams šajā nozarē!,,",
+    "decore-button" : "Uzzināt Vairāk",
+
+    "join-text" : "Pievienojieties mūsu klientu zonai un augšupielādējiet savu pielāgoto projektu ar aprakstu, un mūsu komanda sazināsies ar jums, cik drīz vien iespējams.",
+    "join-button" : "Pievienojies tagad",
+
+    "icons-name-1" : "Energoefektivitāte",
+    "icons-name-2" : "Ilgtspējība",
+    "icons-name-3" : "Estētika",
+    "icons-name-4" : "Funkcionalitāte",
+    "icons-text-1" : "Sākot ar izolāciju un beidzot ar materiāliem, mēs piešķiram prioritāti energoefektivitātei, lai palīdzētu jums ietaupīt komunālo pakalpojumu rēķinus.",
+    "icons-text-2" : "Mūsu pēc pasūtījuma izgatavotās koka fasādes mājas ir būvētas no atbildīgi iegūtiem materiāliem, un visā būvniecības procesā tiek izmantota videi draudzīga prakse.",
+    "icons-text-3" : "Koncentrējoties uz kvalitatīvu meistarību un uzmanību detaļām, mēs radām mājas, kas ir tikpat skaistas, cik funkcionālas.",
+    "icons-text-4" : "Gan energoefektīvās ierīcēs, gan viedās mājas tehnoloģijās ir iekļautas funkcijas, kas padara ikdienu vieglāku un ērtāku.",
+
+    "footer-name-1" : "Kontakti",
+    "footer-name-2" : "Izvēlne",
+    "footer-name-3" : "Seko mums",
+    "footer-link-1" : "Galvenā",
+    "footer-link-2" : "Projekti",
+    "footer-link-3" : "Partneri",
+    "footer-link-4" : "Eksports",
+    "footer-link-5" : "Par mums",
+    "mini-footer-text" : "Visas tiesības aizsargātas",
+
+    "" : "",
+    "" : ""
 }
