--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -9,5 +9,37 @@
     "banner-title": "Индивидуальные проекты",
     "banner-text": "Создан для жизни. Наши индивидуальные деревянные фасадные дома отличаются современным дизайном, непревзойденной энергоэффективностью и долговечностью.",
     
-    "":""
+    "featured-title": "Огромное разнообразие дизайнов.",
+    "featured-name-1" : "Открытая планировка и низкий профиль",
+    "featured-name-2" : "Открытая терраса и широкие окна",
+    "featured-name-3" : "Современные дома-близнецы",
+    "featured-price" : "Начальная цена",
+    "featured-button" : "Сделать предложение",
+
+    "decore-text" : "«Мы специализируемся на создании уникальных домов на заказ с учетом ваших потребностей. Наша команда квалифицированных специалистов гордится тем, что производит высококачественную работу, не имеющую себе равных в отрасли!,,",
+    "decore-button" : "Узнать больше",
+
+    "join-text" : "Присоединяйтесь к зоне наших клиентов и загрузите свой индивидуальный проект с описанием, и наша команда свяжется с вами в ближайшее время.",
+    "join-button" : "Присоединяйся сейчас",
+
+    "icons-name-1" : "Энергетически эффективный",
+    "icons-name-2" : "Устойчивость",
+    "icons-name-3" : "Эстетика",
+    "icons-name-4" : "Функциональность",
+    "icons-text-1" : "От изоляции до материалов, мы отдаем приоритет энергоэффективности, чтобы помочь вам сэкономить на счетах за коммунальные услуги.",
+    "icons-text-2" : "Наши индивидуальные деревянные фасадные дома построены из материалов, полученных ответственным образом, и в процессе строительства применяются экологически безопасные методы.",
+    "icons-text-3" : "Делая акцент на качестве изготовления и внимании к деталям, мы создаем дома, которые настолько же красивы, насколько и функциональны.",
+    "icons-text-4" : "И энергосберегающие приборы, и технологии «умный дом» включают в себя функции, которые делают повседневную жизнь проще и комфортнее.",
+
+    "footer-name-1" : "Контакты",
+    "footer-name-2" : "Меню",
+    "footer-name-3" : "Подпишись",
+    "footer-link-1" : "Главная",
+    "footer-link-2" : "Проекты",
+    "footer-link-3" : "Партнеры",
+    "footer-link-4" : "Экспорт",
+    "footer-link-5" : "О нас",
+    "mini-footer-text" : "Все права защищены",
+
+    "" : ""
 }
