Added all the translations to client side (except footer)

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -30,6 +30,7 @@
     "icons-text-2" : "Unsere maßgefertigten Häuser mit Holzfassade werden aus verantwortungsvoll beschafften Materialien gebaut und berücksichtigen während des gesamten Bauprozesses umweltfreundliche Praktiken.",
     "icons-text-3" : "Mit einem Fokus auf hochwertige Handwerkskunst und Liebe zum Detail schaffen wir Häuser, die ebenso schön wie funktional sind.",
     "icons-text-4" : "Sowohl energieeffiziente Geräte als auch Smart-Home-Technologie integrieren wir Funktionen, die den Alltag einfacher und komfortabler machen.",
+    "icons-button" : "Mehr sehen",
 
     "footer-name-1" : "Kontakte",
     "footer-name-2" : "Speisekarte",
