--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -30,7 +30,8 @@
     "icons-text-2" : "Our custom wooden facade houses are constructed with responsibly-sourced materials and incorporate eco-friendly practices throughout the building process.",
     "icons-text-3" : "With a focus on quality craftsmanship and attention to detail, we create homes that are as beautiful as they are functional.",
     "icons-text-4" : "Both energy-efficient appliances and smart home technology, we incorporate features that make everyday life easier and more comfortable.",
-    
+    "icons-button" : "See More",
+
     "footer-name-1" : "Contacts",
     "footer-name-2" : "Menu",
     "footer-name-3" : "Follow Us",
