--- a/public/locales/lv/common.json
+++ b/public/locales/lv/common.json
@@ -30,6 +30,7 @@
     "icons-text-2" : "Mūsu pēc pasūtījuma izgatavotās koka fasādes mājas ir būvētas no atbildīgi iegūtiem materiāliem, un visā būvniecības procesā tiek izmantota videi draudzīga prakse.",
     "icons-text-3" : "Koncentrējoties uz kvalitatīvu meistarību un uzmanību detaļām, mēs radām mājas, kas ir tikpat skaistas, cik funkcionālas.",
     "icons-text-4" : "Gan energoefektīvās ierīcēs, gan viedās mājas tehnoloģijās ir iekļautas funkcijas, kas padara ikdienu vieglāku un ērtāku.",
+    "icons-button" : "Skatīt vairāk",
 
     "footer-name-1" : "Kontakti",
     "footer-name-2" : "Izvēlne",
