--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -30,6 +30,7 @@
     "icons-text-2" : "Наши индивидуальные деревянные фасадные дома построены из материалов, полученных ответственным образом, и в процессе строительства применяются экологически безопасные методы.",
     "icons-text-3" : "Делая акцент на качестве изготовления и внимании к деталям, мы создаем дома, которые настолько же красивы, насколько и функциональны.",
     "icons-text-4" : "И энергосберегающие приборы, и технологии «умный дом» включают в себя функции, которые делают повседневную жизнь проще и комфортнее.",
+    "icons-button" : "Смотреть еще",
 
     "footer-name-1" : "Контакты",
     "footer-name-2" : "Меню",
