Started working on Projects page

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -42,6 +42,10 @@
     "footer-link-5" : "Über uns",
     "mini-footer-text" : "Alle Rechte vorbehalten",
 
-    "" : "",
+
+
+
+    "banner-title-projects" : "Qualitätsarbeit",
+    "banner-text-projects" : "Entdecken Sie die sorgfältig gestalteten Innenräume, die fachmännische Handwerkskunst und die faszinierenden Außenbereiche, die unsere Arbeit ausmachen.",
     "" : ""
 }
