--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -42,8 +42,11 @@
     "footer-link-5" : "About Us",
     "mini-footer-text" : "All rights reserved",
 
-    "" : "",
-    "" : "",
+
+
+    
+    "banner-title-projects" : "Complete Work",
+    "banner-text-projects" : "Explore the thoughtfully designed interiors, expert craftsmanship, and captivating exteriors that define our work.",
     "" : "",
     "" : "",
     "" : "",
