--- a/public/locales/lv/common.json
+++ b/public/locales/lv/common.json
@@ -42,6 +42,11 @@
     "footer-link-5" : "Par mums",
     "mini-footer-text" : "Visas tiesības aizsargātas",
 
+
+
+
+    "banner-title-projects" : "Kvalitatīvs Darbs",
+    "banner-text-projects" : "Izpētiet pārdomāti izstrādātos interjerus, profesionālu meistarību un valdzinošus eksterjerus, kas nosaka mūsu darbu.",
     "" : "",
     "" : ""
 }
