--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -42,5 +42,10 @@
     "footer-link-5" : "О нас",
     "mini-footer-text" : "Все права защищены",
 
+
+
+
+    "banner-title-projects" : "Качественная работа",
+    "banner-text-projects" : "Откройте для себя тщательно продуманные интерьеры, искусное мастерство и очаровательные экстерьеры, которые отличают нашу работу.",
     "" : ""
 }
