Made the About Us page (responsive)

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -47,12 +47,13 @@
     
     "banner-title-projects" : "Complete Work",
     "banner-text-projects" : "Explore the thoughtfully designed interiors, expert craftsmanship, and captivating exteriors that define our work.",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
+    
+    
+    
+    
+    "banner-title-aboutus" : "Quality of Work",
+    "banner-text-aboutus" : "Your home should be a reflection of your unique lifestyle and personal taste. That's why we offer tailored solutions, working closely with you throughout the design and construction process.",
+    
     "" : "",
     "" : "",
     "" : "",
