--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -45,7 +45,14 @@
 
 
 
-    "banner-title-projects" : "Качественная работа",
+    "banner-title-projects" : "Завершенная Работа",
     "banner-text-projects" : "Откройте для себя тщательно продуманные интерьеры, искусное мастерство и очаровательные экстерьеры, которые отличают нашу работу.",
+    
+    
+    
+    
+    "banner-title-aboutus" : "Качество работы",
+    "banner-text-aboutus" : "Ваш дом должен быть отражением вашего уникального образа жизни и личного вкуса. Вот почему мы предлагаем индивидуальные решения, тесно сотрудничая с вами на протяжении всего процесса проектирования и строительства.",
+
     "" : ""
 }
