--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -45,7 +45,14 @@
 
 
 
-    "banner-title-projects" : "Qualitätsarbeit",
+    "banner-title-projects" : "Vollständiges Werk",
     "banner-text-projects" : "Entdecken Sie die sorgfältig gestalteten Innenräume, die fachmännische Handwerkskunst und die faszinierenden Außenbereiche, die unsere Arbeit ausmachen.",
+    
+    
+    
+    
+    "banner-title-aboutus" : "Qualitätsarbeit",
+    "banner-text-aboutus" : "Ihr Zuhause sollte ein Spiegelbild Ihres einzigartigen Lebensstils und persönlichen Geschmacks sein. Deshalb bieten wir maßgeschneiderte Lösungen und arbeiten während des gesamten Entwurfs- und Bauprozesses eng mit Ihnen zusammen.",
+ 
     "" : ""
 }
