Added banner translation to Partners page

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -54,5 +54,11 @@
     "banner-title-aboutus" : "Qualitätsarbeit",
     "banner-text-aboutus" : "Ihr Zuhause sollte ein Spiegelbild Ihres einzigartigen Lebensstils und persönlichen Geschmacks sein. Deshalb bieten wir maßgeschneiderte Lösungen und arbeiten während des gesamten Entwurfs- und Bauprozesses eng mit Ihnen zusammen.",
  
+
+
+
+    "banner-title-partners" : "Unsere Partner",
+    "banner-text-partners" : "Wir sind stolz darauf, mit einer ausgewählten Gruppe geschätzter Partner zusammenzuarbeiten, die unser Engagement für Spitzenleistungen und unsere Vision für die Schaffung außergewöhnlicher, maßgeschneiderter Häuser mit Holzfassade teilen.",
+   
     "" : ""
 }
