--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -54,6 +54,14 @@
     "banner-title-aboutus" : "Quality of Work",
     "banner-text-aboutus" : "Your home should be a reflection of your unique lifestyle and personal taste. That's why we offer tailored solutions, working closely with you throughout the design and construction process.",
     
+
+
+
+    "banner-title-partners" : "Our Partners",
+    "banner-text-partners" : "We are proud to work alongside a select group of esteemed partners who share our commitment to excellence and share our vision for creating exceptional custom wooden facade houses.",
+    
+
+
     "" : "",
     "" : "",
     "" : "",
