--- a/public/locales/lv/common.json
+++ b/public/locales/lv/common.json
@@ -54,5 +54,11 @@
     "banner-title-aboutus" : "Kvalitatīvs Darbs",
     "banner-text-aboutus" : "Jūsu mājām vajadzētu atspoguļot jūsu unikālo dzīvesveidu un personīgo gaumi. Tāpēc mēs piedāvājam pielāgotus risinājumus, cieši sadarbojoties ar jums visā projektēšanas un būvniecības procesā.",
  
+
+
+
+    "banner-title-partners" : "Mūsu partneri",
+    "banner-text-partners" : "Mēs lepojamies, ka sadarbojamies ar atlasītu cienījamu partneru grupu, kam ir kopīga mūsu apņemšanās sasniegt izcilību un mūsu redzējums par izcilu koka fasādes māju izveidi pēc pasūtījuma.",
+   
     "" : ""
 }
