--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -54,5 +54,11 @@
     "banner-title-aboutus" : "Качество работы",
     "banner-text-aboutus" : "Ваш дом должен быть отражением вашего уникального образа жизни и личного вкуса. Вот почему мы предлагаем индивидуальные решения, тесно сотрудничая с вами на протяжении всего процесса проектирования и строительства.",
 
+
+
+
+    "banner-title-partners" : "Наши партнеры",
+    "banner-text-partners" : "Мы гордимся тем, что работаем вместе с избранной группой уважаемых партнеров, которые разделяют наше стремление к совершенству и наше видение создания исключительных домов с деревянным фасадом на заказ.",
+   
     "" : ""
 }
