Started working on Exports

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -60,5 +60,11 @@
     "banner-title-partners" : "Unsere Partner",
     "banner-text-partners" : "Wir sind stolz darauf, mit einer ausgewählten Gruppe geschätzter Partner zusammenzuarbeiten, die unser Engagement für Spitzenleistungen und unsere Vision für die Schaffung außergewöhnlicher, maßgeschneiderter Häuser mit Holzfassade teilen.",
    
+
+
+
+    "banner-title-exports" : "Exporte",
+    "banner-text-exports" : "Ganz gleich, ob Sie Einzelhausbesitzer, Bauträger oder Architekt sind, wir sind bestrebt, Ihnen die höchsten Standards an Handwerkskunst und Service zu bieten.",
+ 
     "" : ""
 }
