--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -62,6 +62,12 @@
     
 
 
+
+    "banner-title-exports" : "Exports",
+    "banner-text-exports" : "Whether you are an individual homeowner, developer, or architect, we are dedicated to providing you with the highest standards of craftsmanship and service.",
+  
+
+
     "" : "",
     "" : "",
     "" : "",
