--- a/public/locales/lv/common.json
+++ b/public/locales/lv/common.json
@@ -60,5 +60,11 @@
     "banner-title-partners" : "Mūsu partneri",
     "banner-text-partners" : "Mēs lepojamies, ka sadarbojamies ar atlasītu cienījamu partneru grupu, kam ir kopīga mūsu apņemšanās sasniegt izcilību un mūsu redzējums par izcilu koka fasādes māju izveidi pēc pasūtījuma.",
    
+
+
+
+    "banner-title-exports" : "Eksports",
+    "banner-text-exports" : "Neatkarīgi no tā, vai esat individuāls mājas īpašnieks, attīstītājs vai arhitekts, mēs cenšamies nodrošināt jums visaugstākos meistarības un pakalpojumu standartus.",
+ 
     "" : ""
 }
