--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -60,5 +60,11 @@
     "banner-title-partners" : "Наши партнеры",
     "banner-text-partners" : "Мы гордимся тем, что работаем вместе с избранной группой уважаемых партнеров, которые разделяют наше стремление к совершенству и наше видение создания исключительных домов с деревянным фасадом на заказ.",
    
+
+
+
+    "banner-title-exports" : "Экспорт",
+    "banner-text-exports" : "Независимо от того, являетесь ли вы индивидуальным домовладельцем, застройщиком или архитектором, мы стремимся предоставить вам самые высокие стандарты мастерства и обслуживания.",
+ 
     "" : ""
 }
